--- a/student_15/mystyle.css
+++ b/student_15/mystyle.css
@@ -1,24 +1,42 @@
-<html>
-<head>
-  <link rel= "Styleheet" type "txt/css" href= "mystyle.css">
-</head>
-<body>
-<header>
-  <a href = "/">
-    <img src = "https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
-  </a>
-  <h1> Your Best Dream </h1>
-</header>
-<nav>
-  <ul>
-    <li><a href = "index.html"> Home </a></li>
-    <li><a href = "Gallery"> Gallery </a></li>
-    <li><a href = "About Me"> About Us </a></li>
-    <li><a href = Contact Us"> Contact Us </a></li>
-  </ul>
-</nav>
-<footer>
-This was creatd by Hank.inc a Pineapple on Pizza Company
-</footer>
-</body>
-</html>
+
+.header{
+ 
+}
+
+.header img{
+ width:99px;
+ height:99px;
+ float:left;
+}
+
+.header h1{
+ font-family:arial;
+ float:left;
+ margin-left:11px;
+ width:630px;
+}
+
+.nav ul{
+ clear: both;
+}
+
+.nav li{
+ list-style-type:none;
+ display:inline-block;
+ padding-left:5px;
+ 
+}
+
+.products li{
+ width:199px;
+ min-height:199px;
+ border:1px solid black;
+ padding: 10px;
+ list-style:none;
+ display: inline-block;
+ margin:5px;
+ vertical-align:top;
+}
+.products img{
+ width:190px;
+}
