--- a/student_08/mystyle.css
+++ b/student_08/mystyle.css
@@ -5,16 +5,16 @@
 }
 
 .header img{
- width:100px;
- height:100px;
+ width:50px;
+ height:50px;
  float:left;
 }
 
 .header h1{
- font-family:arial;
+ font-family:Lobster;
  float:left;
  margin-left:10px;
- width:640px;
+ width:500px;
 }
 
 .nav ul{
@@ -31,7 +31,7 @@
 .products li{
  width:200px;
  min-height:200px;
- border:1px solid black;
+ border:1px solid blue;
  padding: 5px;
  list-style:none;
  display: inline-block;
