--- a/student_02/mystyle.css
+++ b/student_02/mystyle.css
@@ -10,7 +10,7 @@
 }
 
 .header h1{
- font-family:"Architects Daughter";
+ font-family:"https://fonts.googleapis.com/css?family=Architects Daughter";
  float:left;
  margin-left:15px;
  width:640px;
