--- a/student_11/mystyle.css
+++ b/student_11/mystyle.css
@@ -4,16 +4,16 @@
 }
 
 .header img{
- width:100px;
- height:100px;
+ width:50px;
+ height:50px;
  float:left;
 }
 
 .header h1{
- font-family:arial;
+ font-family:;
  float:left;
- margin-left:10px;
- width:640px;
+ margin-left:5px;
+ width:320px;
 }
 
 .nav ul{
