--- a/student_14/mystyle.css
+++ b/student_14/mystyle.css
@@ -8,8 +8,8 @@
  float:left;
 }
 
-.header h1{
- font-family:Papyrus, fantasy;
+ h1{
+ font-family: Papyrus, fantasy;
  float:left;
  margin-left:10px;
  width:640px;
