--- a/student_13/mystyle.css
+++ b/student_13/mystyle.css
@@ -1,1 +1,14 @@
 
+. header{
+  
+}
+
+    .header img{
+    width:50px;
+    height:50px;
+    float;left;
+}
+
+.header h1{
+  font-family: "Times New Roman", Times, serif;
+  float:left;
