--- a/student_08/mystyle.css
+++ b/student_08/mystyle.css
@@ -11,7 +11,7 @@
 }
 
 .header h1{
- font-family:Courier New;
+ font-family:"Courier New", Courier, monospace;
  float:left;
  margin-left:10px;
  width:500px;
