--- a/student_24/mystyle.css
+++ b/student_24/mystyle.css
@@ -1,3 +1,6 @@
+<html>
+<body>
+<style>
 * {
   box-sizing: border-box;
 }
@@ -19,5 +22,7 @@
   display: table;
   clear: both;
 }
-
+</style>
+</body>
+</html>
 
