--- a/student_21/mystyle.css
+++ b/student_21/mystyle.css
@@ -30,7 +30,7 @@
 }
 
 .header h1{
- font-family:AleoItallic;
+ font-family:"Comic Sans MS", cursive, sans-serif;
  float:left;
  margin-left:15px;
  width:640px;
